<resources>
    <string name="app_name">CampusApp</string>
    <string name="DozentTutor">Dozent/Tutor</string>
    <string name="Semester">Semester</string>
    <string name="Raum">Raum</string>
    <string name="Datum">Zeit</string>
    <string name="Veranstaltungsname">Name</string>
    <string name="MehrInformationen">Mehr Informationen</string>
    <string name="Gebäude">Gebäude</string>
    <string name="Hauptseite">Hauptseite</string>
    <string name="Login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_ENTER">ENTER</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Wilkommen !"</string>
    <string name="invalid_username">Kein gültiger Username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string name="UniLogo">UniLogo</string>
    <string name="search">Search</string>
    <string name="string_search">Search</string>
    <string name="filtericon">Filtericon</string>
    <string name="searchicon">SearchIcon</string>
    <string name="generictextfield">GenericTextField</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="credits">Credits: Emre, Valeryia, Adrian, Niklas </string>
    <string name="einstellungen">Einstellungen</string>
    <string name="raum_suchen">Raum suchen</string>
    <string name="alle_veranstaltungen">Alle Veranstaltungen</string>
    <string name="meine_veranstaltungen">Meine Veranstaltungen</string>
    <string name="news_date">12/02/2022</string>
    <string name="news_title">Headliner</string>
    <string name="news_content">here is the text for the news</string>
    <string name="news">news</string>
    <string name="new_activities">this is a new activity</string>
    <string name="dozent">Dozent:</string>
    <string name="zeiten">Zeiten:</string>
    <string name="semester">Semester:</string>
    <string name="roomText">Raum:</string>
    <string name="courseText">Titel:</string>
    <string name="className">Class Name</string>
    <string name="moreInfoText">More Info Text</string>
    <string name="contentText">Inhalt:</string>
    <string name="examText">Klausur:</string>
    <string name="participantText">Mitglieder</string>
    <string name="joinText">Beitreten</string>
    <string name="dozentExample">Professor Mustermann</string>
    <string name="timeExample">12/02/2022</string>
    <string name="semesterExample">Sommersemester</string>
    <string name="roomExample">00/0080</string>
    <string name="Dozent">Dozent:</string>
    <string name="Zeit1">Zeit:</string>
    <string name="Semester1">Semester:</string>
    <string name="Filter">Filter:</string>
    <string name="home">Home</string>
    <string name="sign_out">Logout</string>
    <string name="course_period">Kurszeitraum   </string>
    <string name="course_time">Kurszeiten</string>
    <string name="uhr">Uhr</string>
    <string name="_08_00_10_00">08:00 - 10:00</string>
    <string name="_10_00_12_00">10:00 - 12:00</string>
    <string name="_12_00_14_00">12:00 - 14:00</string>
    <string name="montag">Montag</string>
    <string name="_14_00_16_00">14:00 - 16:00</string>
    <string name="_16_00_18_00">16:00 - 18:00</string>
    <string name="_18_00_20_00">18:00 - 20:00</string>
    <string name="dienstag">Dienstag</string>
    <string name="day">Tag</string>
    <string name="pcpt_little_header">Alle Teilnehmer</string>
    <string name="rooms_little_header">Alle Räume</string>
    <string name="main_title_my_courses">Meine Veranstaltungen</string>
    <string name="main_title_all_courses">Alle Veranstaltungen</string>
    <string name="main_title_search_rooms">Raumsuche</string>
    <string name="rooms_free_header">Nur Freie Räume</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="chat">Chat</string>
    <string name="content_detail_example">pdf, 1.1 MB, 11. Apr 2022, 13:41</string>
    <string name="content_detail_title">00-orga</string>
    <string name="button_text">Button Text</string>
    <string name="example_time">00:00</string>
    <string name="event">Event</string>


</resources>