<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:id="@+id/homePage"
        android:icon="@drawable/ic_list"/>

    <item android:title="@string/meine_veranstaltungen"
        android:id="@+id/meineVeranstaltungen"
        android:icon="@drawable/ic_assignment"/>

    <item android:title="@string/alle_veranstaltungen"
        android:id="@+id/alleVeranstaltungen"
        android:icon="@drawable/ic_list"/>

    <item android:title="@string/raum_suchen"
        android:id="@+id/RaumSuchen"
        android:icon="@drawable/ic_baseline_search_24"/>

    <item android:title="@string/einstellungen"
        android:id="@+id/Settings"
        android:icon="@drawable/ic_settings"/>

    <item android:title="@string/sign_out"
        android:id="@+id/signOut"
        android:icon="@drawable/ic_baseline_logout_24"/>


</menu>